--- a/css/content-script.css
+++ b/css/content-script.css
@@ -1,8 +1,8 @@
-header.Header {
+.logged-in:not(.full-width) header.Header {
   padding-left: calc(50% - 490px);
   padding-right: calc(50% - 490px);
 }
 
-header.Header > .d-flex {
+.logged-in:not(.full-width) header.Header > .d-flex {
   padding: 0 !important;
 }
