Fix new class name changes for the header again
Closes #7

--- a/css/content-script.css
+++ b/css/content-script.css
@@ -1,3 +1,4 @@
+/*v0.0.3*/
 .logged-in:not(.full-width) header.Header-old {
   padding-left: calc(50% - 490px);
   padding-right: calc(50% - 490px);
@@ -5,4 +6,9 @@
 
 .logged-in:not(.full-width) header.Header-old > .d-flex {
   padding: 0 !important;
+}
+/*v0.0.4*/
+.logged-in:not(.full-width) header.Header {
+  padding-left: calc(50% - 490px);
+  padding-right: calc(50% - 490px);
 }
