--- a/css/content-script.css
+++ b/css/content-script.css
@@ -7,8 +7,15 @@
 .logged-in:not(.full-width) header.Header-old > .d-flex {
   padding: 0 !important;
 }
+
 /*v0.0.4*/
 .logged-in:not(.full-width) header.Header {
   padding-left: calc(50% - 490px) !important;
   padding-right: calc(50% - 490px) !important;
+}
+
+/*v0.0.6*/
+.logged-in.page-profile:not(.full-width) header.Header {
+  padding-left: calc(50% - 600px) !important;
+  padding-right: calc(50% - 600px) !important;
 }
