--- a/css/content-script.css
+++ b/css/content-script.css
@@ -9,14 +9,13 @@
 }
 
 /*v0.0.4, v0.0.8*/
-.logged-in:not(.full-width) header.Header,
-.logged-in.page-profile:not(.notifications-v2) header.Header  {
+.logged-in:not(.full-width):not(.notifications-v2) header.Header {
   padding-left: calc(50% - 490px) !important;
   padding-right: calc(50% - 490px) !important;
 }
 
 /*v0.0.6, v0.0.7*/
-.logged-in.page-profile:not(.full-width) header.Header{
+.logged-in.page-profile:not(.full-width) header.Header {
   padding-left: calc(50% - 624px) !important;
   padding-right: calc(50% - 624px) !important;
 }
