Fix issue on certain full-width repo pages
Closes #28

--- a/css/content-script.css
+++ b/css/content-script.css
@@ -20,9 +20,9 @@
   padding-right: calc(50% - 624px) !important;
 }
 
-/*v0.0.9, v0.0.11, V0.0.12*/
+/*v0.0.9, v0.0.11, V0.0.12, v0.0.13*/
 body:not(.full-width) .pagehead.repohead,
-#repository-container-header {
+body:not(.full-width) #repository-container-header {
   padding-left: calc(50% - 640px) !important;
   padding-right: calc(50% - 640px) !important;
 }
@@ -44,4 +44,9 @@ body:not(.full-width) .pagehead.repohead,
 .logged-in:not(.full-width) .application-main > div {
     padding-right: 0px !important;
     padding-left: 0px !important;
+}
+
+/*V0.0.13*/
+nav.js-repo-nav #code-tab {
+  padding-left: 0!important;
 }
